<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/dashboard"
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:id="@+id/orderList"
            android:title="@string/orders" />
        <item
            android:icon="@drawable/ic_person_black_24dp"
            android:id="@+id/customer_details"
            android:title="@string/customer_details" />
        <item
            android:id="@+id/reports"
            android:icon="@drawable/orderlist"
            android:title="@string/reports" />
    </group>




        <item
            android:title="Profile">
            <menu>
                <group>
            <item
                android:title="Employee"
                android:id="@+id/employee"
                android:icon="@drawable/employee_icon"
                />
            <item
                android:title="Change Password"
                android:id="@+id/changePassword"
                android:icon="@drawable/change_password"
                />

            <item
                android:title="Logout"
                android:id="@+id/logout"
                android:icon="@drawable/logout_icon"

                />
                </group>
            </menu>
        </item>



</menu>


