<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.convalida.ctpl_dt10.foodypos.Login">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/administratorlogin"
        android:textSize="20sp"
        android:textColor="#000"
        android:id="@+id/admnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admnLogin"
        android:id="@+id/verticalLinearLayout"
        android:layout_marginTop="25dp"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_email"
            android:layout_marginTop="10dp"
            app:errorTextAppearance="@style/errorAppearance"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email_address"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:id="@+id/emailAddress"
                android:layout_margin="10dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_password"
            android:layout_marginTop="10dp"
            app:errorTextAppearance="@style/errorAppearance">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:layout_margin="10dp"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2.4">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/rememberMe"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/remember_me"
                android:layout_weight="2"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.4"
                android:text="@string/forgot_password"
                android:onClick="forgotPassword"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/sign_in"
            android:id="@+id/signInBtn"
            android:textColor="#fff"
            android:onClick="signIn"
            android:background="@drawable/change_color_pressed"/>
    </LinearLayout>


</RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>