<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_marginTop="25dp"
    android:orientation="vertical"
    tools:context="com.convalida.android.foodypos.ForgotPassword">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressLayout"
            android:visibility="invisible">
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>

        </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/verticalLinearLayout"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_head"
        android:textSize="20sp"
        android:textColor="#000"
        android:id="@+id/admnLogin"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_forgot_email"
        android:layout_marginTop="10dp"
        app:errorTextAppearance="@style/errorAppearance">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email_address"
            android:imeOptions="flagNoExtractUi"
            android:id="@+id/forgotEmail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_margin="10dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/submitBtn"
        android:onClick="forgotSubmit"
        android:text="@string/submit"
        android:textColor="#fff"
        android:background="@drawable/change_color_pressed"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="30dp"
            android:text="@string/login"
            android:onClick="loginScreen"/>
    </LinearLayout>
    </LinearLayout>
    </FrameLayout>

</LinearLayout>
