<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentRelative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.convalida.ctpl_dt10.foodypos.MainActivity"
    tools:showIn="@layout/app_bar_main">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/progressLayout">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    android:id="@+id/noDataLayout">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="No data found"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"/>
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout"
        android:visibility="invisible"
        >


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.convalida.ctpl_dt10.foodypos.MainActivity"
    tools:showIn="@layout/app_bar_main">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/parentll"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_margin="10dp"
        app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/totalSalell"
        >

    <TextView
        android:layout_width="95sp"
        android:layout_height="95sp"
        android:text="@string/total_sale_symbol"
        android:gravity="center"
        android:textColor="#000"
        android:background="@color/colorAccent"
        android:textSize="40sp"
      />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/total_sale_txt"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textSize="35sp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:id="@+id/totalSaleValue"
                android:text=""/>
    </LinearLayout>
</LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_margin="10dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/weeklySaleLl"
            >

            <TextView
                android:layout_width="95sp"
                android:layout_height="95sp"
                android:text="@string/weekly_sale_symbol"
                android:gravity="center"
                android:textColor="#fff"
                android:background="#333"
                android:textSize="40sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/weekly_sale_txt"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:textSize="35sp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:id="@+id/weekSaleValue"
                    android:text=""/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#fff"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/totalOrderLl">

            <TextView
                android:id="@+id/totalOrderImg"
                android:layout_width="95sp"
                android:layout_height="95sp"
                android:background="#12afbe"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/total_orders_txt"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:id="@+id/totalOrdersValue"
                    android:text=""
                    android:textSize="35sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_margin="10dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/weeklyOrderLl"
            >

            <TextView
                android:layout_width="95sp"
                android:layout_height="95sp"
                android:gravity="center"
                android:id="@+id/weeklyOrderImg"
                android:textColor="#fff"
                android:background="#e74c3c"
                android:textSize="40sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/weekly_order_txt"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:textSize="35sp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:id="@+id/weekOrderValue"
                    android:text=""/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_margin="10dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/totalCustomerParent"
            >

            <TextView
                android:layout_width="95sp"
                android:layout_height="95sp"
                android:gravity="center"
                android:id="@+id/totalCustomerImg"
                android:textColor="#fff"
                android:textSize="40sp"
                android:background="#333"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
               >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/total_customers_txt"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:textSize="35sp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:id="@+id/totalCustomersValue"
                    android:layout_marginRight="10dp"
                    android:text=""/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_margin="10dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/weeklyCustomerParent"
            >

            <TextView
                android:layout_width="95sp"
                android:layout_height="95sp"
                android:id="@+id/weeklyCustomerImg"
                android:gravity="center"
                android:background="@color/colorAccent"
                android:textColor="#fff"
                android:textSize="40sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/weekly_customer_txt"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:textSize="35sp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:layout_marginRight="10dp"
                    android:text=""
                    android:id="@+id/weekCustomerValue"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Earning graph"
            android:id="@+id/earningText"
            android:textSize="18sp"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:text="Year"
            android:layout_alignBaseline="@id/earningText"
            android:gravity="center"
            android:background="@drawable/rounded_textview"
            android:layout_margin="10dp"
            android:onClick="yearGraph"
            android:id="@+id/yearBtn"
            android:textColor="#fff"
            android:layout_alignParentRight="true"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:text="Month"
            android:layout_alignBaseline="@id/yearBtn"
            android:gravity="center"
            android:onClick="monthGraph"
            android:background="@drawable/rounded_textview"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/monthBtn"
            android:textColor="#fff"
            android:layout_toLeftOf="@id/yearBtn"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:text="Week"
            android:gravity="center"
            android:background="@drawable/rounded_textview"
            android:layout_marginTop="10dp"
            android:layout_alignBaseline="@id/yearBtn"
            android:layout_marginLeft="10dp"
            android:id="@+id/weekBtn"
            android:textColor="#fff"
            android:layout_toLeftOf="@id/monthBtn"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/orders"
    android:layout_alignParentRight="true"
    android:layout_below="@id/yearBtn"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:id="@+id/ordersText"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/ordersText"
            android:id="@+id/ordersBtn"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="7dp"
            android:layout_alignBaseline="@id/ordersText"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sales"
            android:layout_marginTop="10dp"
            android:id="@+id/salesText"
            android:layout_toLeftOf="@id/ordersBtn"
            android:layout_alignBaseline="@id/ordersBtn"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/salesBtn"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/salesText"
            android:layout_alignBaseline="@id/salesText"/>

    </RelativeLayout>
    <com.github.mikephil.charting.charts.LineChart
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/chart"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        >
    </com.github.mikephil.charting.charts.LineChart>


</LinearLayout>
</ScrollView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cecece"
            android:layout_above="@id/bottom_navigation"/>



        <android.support.design.widget.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/bottom_navigation"
            android:background="#fff"
            android:layout_alignParentBottom="true"
            app:menu="@menu/bottom_navigation"
            app:itemIconTint="@color/colorPrimary"
            app:itemTextColor="@color/colorPrimary"
            />

    </RelativeLayout>
    </FrameLayout>
</RelativeLayout>

